--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -168,7 +168,7 @@ const metadata = {
       class: 'mx-auto w-full',
       width: 552,
       height: 552,
-      widths: [552],
+      widths: [400, 552, 800],
       sizes: '(max-width: 768px) 100vw, 552px',
     }}
   >
