--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,14 +1,15 @@
 ---
-import logo from '~/assets/images/logo/logo.webp';
+import Image from '~/components/common/Image.astro';
 ---
 
-<img
-  src={logo.src}
+<Image
+  src="~/assets/images/logo/logo.webp"
   width={360}
   height={114}
   alt="ReBirth Web Design Logo"
-  class="max-w-[180px] w-auto h-auto self-center"
+  class="self-center h-auto max-w-[180px] w-auto"
+  widths={[180, 360]}
+  sizes="180px"
   loading="eager"
-  decoding="async"
   fetchpriority="high"
 />
