--- a/src/components/ui/ItemGrid2.astro
+++ b/src/components/ui/ItemGrid2.astro
@@ -35,7 +35,7 @@ const uniqueId = `swiper-${Math.random().toString(36).substr(2, 9)}`;
               <TileWrapper
                 {...tileProps}
                 class={twMerge(
-                  'mobile-swipe-card relative flex flex-col flex-shrink-0 w-full snap-center',
+                  'mobile-swipe-card relative flex flex-col items-center text-center flex-shrink-0 w-full snap-center',
                   href && 'cursor-pointer',
                   panelClass,
                   itemClasses?.panel
